# totem-gstbt

./: .gitignore  GST  README.md  TIPS  buffering_looog  chatgpt  looogg2  loooog  looooog3  looooog_downloading  meson.build  meson_options.txt  setup_environment_for_build.sh  setup_environment_for_run.sh  xijie  xijie.pub
data/: meson.build  playlist.ui  shortcuts.ui  totem-player-toolbar.ui  totem-preferences-dialog.ui  totem.css  totem.gresource.xml  totem.ui
docs/reference/: totem-sections.txt
src/: meson.build  totem-main-toolbar.c  totem-menu.c  totem-menu.h  totem-object.c  totem-options.c  totem-player-toolbar.c  totem-player-toolbar.h  totem-playlist.c  totem-playlist.h  totem-preferences-dialog.c  totem-private.h  totem-session.c  totem-uri.c  totem-uri.h  totem.c  totem.h
src/backend/: bacon-time-label.c  bacon-video-widget.c  bacon-video-widget.h  bitfield-scale.c  bitfield-scale.h  lt-bitfield-wrapper.cpp  lt-bitfield-wrapper.h  meson.build
src/gst/: meson.build  totem-gst-helpers.c  totem-gst-pixbuf-helpers.c
src/gst/gst-bt/: gst_bt.c  gst_bt.h  gst_bt_demux.cpp  gst_bt_demux.hpp  gst_bt_type.c  meson.build
src/plugins/: meson.build  totem-dirs.c  totem-plugin.h  totem-plugins-engine.c
src/plugins/open-directory/: totem-open-directory.c
src/plugins/properties/: bacon-video-widget-properties.c  bacon-video-widget-properties.h  totem-movie-properties.c
src/plugins/rotation/: totem-rotation.c
src/plugins/screensaver/: totem-screensaver.c
src/plugins/screenshot/: screenshot.plugin.desktop.in  totem-gallery.c
src/plugins/variable-rate/: totem-variable-rate-plugin.c  variable-rate.plugin.desktop.in
